# haxo

./: .coverage  .flake8  .gitignore  Readme.md  constants.py  container.py  haxo.py  noxfile.py  pkg_info.py  pyproject.toml  requirements.txt  todo.md  todo.rst  utils.py
.github/workflows/: greetings.yml  tests.yml
data/: Readme.md  fedora-pkg-lc.csv  pip-pkg-lc.csv  ubuntu-apt-version.csv  ubuntu-pkg-lc.csv
docs/: conf.py  constants.html  haxo.html  index.rst  license.rst  pkg_info.html  reference.rst  utils.html
src/haxo/: console.py  container.py  diff.py  pkg_info.py  utils.py
src/haxo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/haxo/data/: Readme.md
src/haxo/data/diff/: Readme.md
tests/: Readme.md  test_container.py  test_diff.py  test_pkg_info.py  test_utils.py
