[tool.poetry]
name = "haxo"
version = "0.1.0"
authors = ["rahulunair <rahulunair@gmail.com>"]
description = "Haxo tool to gather metadata of packages in a docker image"
license = "UNLICENSE"
readme = "Readme.md"
homepage = "https://github.com/rahulunair/haxo.git"
repository = "https://github.com/rahulunair/haxo.git"
keywords = ["haxo"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
numpy = "^1.18.5"
pandas = "^1.0.4"
python-dateutil = "^2.8.1"
pytz = "^2020.1"
six = "^1.15.0"
tabulate = "^0.8.7"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
haxo = "haxo.console:cli"
