[tool.poetry]
name = "haxo"
version = "0.1.0"
authors = ["rahulunair <rahulunair@gmail.com>"]
description = "Haxo tool to gather metadata of packages in a docker image"
license = "UNLICENSE"
readme = "Readme.md"
homepage = "https://github.com/rahulunair/haxo.git"
repository = "https://github.com/rahulunair/haxo.git"
keywords = ["haxo"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
numpy = "^1.18.5"
pandas = "^1.0.4"
python-dateutil = "^2.8.1"
pytz = "^2020.1"
six = "^1.15.0"
tabulate = "^0.8.7"
[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
nox = "^2020.5.24"
mypy = "^0.780"
pytype = {version = "^2020.6.1", python = "3.7"}
sphinx = "^3.1.1"
sphinx-autodoc-typehints = "^1.10.3"

[tool.poetry.scripts]
haxo = "haxo.console:cli"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["haxo"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

