[tool.poetry]
name = "haxo"
version = "0.1.0"
authors = ["rahulunair <rahulunair@gmail.com>"]
description = "Haxo tool to gather metadata of packages in a docker image"
license = "UNLICENSE"
readme = "Readme.md"
homepage = "https://github.com/rahulunair/haxo.git"
repository = "https://github.com/rahulunair/haxo.git"
keywords = ["haxo"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
numpy = "^1.18.5"
pandas = "^1.0.4"
python-dateutil = "^2.8.1"
pytz = "^2020.1"
six = "^1.15.0"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.1"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.8.5"
mypy = "^0.761"
pytype = {version = "^2020.1.8", python = "3.7"}
flake8-annotations = "^2.0.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
xdoctest = "^0.11.0"
sphinx = "^2.3.1"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.22"

[tool.poetry.scripts]
haxo = "haxo.console:cli"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["haxo"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

